# healthy-person-emulator-dotorg

./: .dockerignore  .env.development  .env.example  .eslintrc.cjs  .gitignore  .gitmodules  .infisical.example.json  .infisicalignore  .npmrc  .oxlintrc.json  1q  3q  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.preview  README.md  biome.json  cloudbuild.yaml  compose.dev.yaml  container-worker.ts  docker-compose.yml  drizzle.config.ts  eslint.config.js  index.html  knip.json  localdev.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  query.sql  react-router.config.ts  skills-lock.json  tailwind.config.js  tailwind.config.ts  todo.md  tsconfig.json  (+8 more)
.agent/: settings.json  settings.local.json
.github/: pull_request_template.md
app/: entry.client.tsx  entry.server.tsx  load-context.ts  root.tsx  routes.ts  tailwind.css
container/: Dockerfile  main.py  pyproject.toml
container/shared/: config.py
container/tasks/: create_og_image.py  delete_social.py  extract_and_load_to_bq.py  post_activitypub.py  post_bluesky.py  post_tweet.py  report_legendary_article.py  report_weekly_summary.py
container/tests/: test_smoke.py
docker/: init-db.sql
docs/: 2024-04-07-MigrationPlan.md  secrets-management.md
drizzle/: schema.ts
e2e/: a11y.spec.ts  theme-persistence.spec.ts
functions/: maketext.ts  test.ts
prisma/: dimComments.csv  dimPosts.csv  dimTags.csv  fctCommentVoteHistory.csv  fctPostVoteHistory.csv  relPostTags.csv  schema.prisma  seed.ts
public/: ads.txt  nofrash.js  robots.txt  sitemap.xml
(+383 files in other folders)
